# soth

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
.travis/: build
CMakeModules/: FindEigen2.cmake  FindEigen3.cmake
doc/: CMakeLists.txt  package.dox.cmake
exe/: CMakeLists.txt  conic_simplification.cpp  ijrr2012.cpp  ijrr_ehqp.cpp  ijrr_ihqp.cpp  simple.cpp
exe/ijrr/: ehqp.cpp  ihqp.cpp
include/: CMakeLists.txt
include/soth/: ActiveSet.hpp  Algebra.h  Algebra.hpp  Allocator.hpp  BaseY.hpp  BasicStage.hpp  Bound.hpp  COD.hpp  DestructiveColPivQR.h  DestructiveColPivQR.hpp  Givens.h  Givens.hpp  HCOD.hpp  RotationGiven.h  RotationHouseholder.h  RotationHouseholder.hpp  Stage.hpp  SubMatrix.h  SubMatrix.hpp  debug.h  debug.hpp  solvers.h  solvers.hpp  soth.h
src/: ActiveSet.cpp  ActiveSet.hpp  Algebra.cpp  Algebra.hpp  Allocator.cpp  Allocator.hpp  BaseY.cpp  BaseY.hpp  BasicStage.cpp  BasicStage.hpp  Bound.cpp  Bound.hpp  CMakeLists.txt  COD.hpp  DestructiveColPivQR.hpp  Givens.cpp  Givens.hpp  HCOD.cpp  HCOD.hpp  Random.cpp  Random.hpp  Stage.cpp  Stage.hpp  SubMatrix.hpp  debug.cpp  debug.hpp  solvers.hpp  soth.cpp
unitTesting/: CMakeLists.txt  COD.hpp  CODclean.hpp  MatrixRnd.cpp  MatrixRnd.h  MatrixRnd.hpp  RandomGenerator.cpp  RandomGenerator.h  RandomGenerator.hpp  anta3.txt  genTest.sh  gettimeofday.cpp  gettimeofday.hpp  minus.txt  new.txt  plus.txt  sot.txt  talgebra.cpp  tasearch.cpp  tbasic.cpp  tchrono.cpp  tcod.cpp  tcompatibility.cpp  tdamping.cpp  tdestructiveQR.cpp  tdump_problem.cpp  texhcod.cpp  tgivens.cpp  thcod.cpp  thcod_full.cpp  tihqp.cpp  tmanu.cpp  tqr.cpp  trandom.cpp  tsolve.cpp  tstage.cpp  tsubmatrix.cpp  tsvd.cpp  ttrack.cpp
