#
#  Copyright
#


ADD_DEFINITIONS(-DDEBUG=2)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# --- tsubmatrix ---
SET(EXECUTABLE_NAME tsubmatrix)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tsubmatrix.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

SET(EXECUTABLE_NAME tsolve)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tsolve.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tbasic ---
SET(EXECUTABLE_NAME tbasic)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tbasic.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tstage ---
SET(EXECUTABLE_NAME tstage)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tstage.cpp RandomGenerator.cpp MatrixRnd.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tdestructiveQR ---
SET(EXECUTABLE_NAME tdestructiveQR)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tdestructiveQR.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}
  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- thcod ---
SET(EXECUTABLE_NAME thcod)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  thcod.cpp MatrixRnd.cpp RandomGenerator.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- texhcod ---
SET(EXECUTABLE_NAME texhcod)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  texhcod.cpp MatrixRnd.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tgivens ---
SET(EXECUTABLE_NAME tgivens)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tgivens.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tasearch ---
SET(EXECUTABLE_NAME tasearch)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tasearch.cpp MatrixRnd.cpp RandomGenerator.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- trandom ---
SET(EXECUTABLE_NAME trandom)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  trandom.cpp MatrixRnd.cpp RandomGenerator.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tchrono ---
SET(EXECUTABLE_NAME tchrono)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tchrono.cpp MatrixRnd.cpp RandomGenerator.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- tcompatibility ---
SET(EXECUTABLE_NAME tcompatibility)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  tcompatibility.cpp MatrixRnd.cpp RandomGenerator.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

# --- ttrack ---
SET(EXECUTABLE_NAME ttrack)
ADD_EXECUTABLE(${EXECUTABLE_NAME}
  ttrack.cpp MatrixRnd.cpp RandomGenerator.cpp)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}  ${PROJECT_NAME})
LIST2STRING(_cf "${${PROJECT_NAME}_src_CXXFLAGS}")
LIST2STRING(_lf "${${PROJECT_NAME}_src_LDFLAGS}")
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME}
  PROPERTIES
  COMPILE_FLAGS "${_cf}"
  LINK_FLAGS "${_lf}"
)

